--- a/META.yml
+++ b/META.yml
@@ -1,29 +1,32 @@
---- #YAML:1.0
-name:               Text-Morse
-version:            0.03
-abstract:           Encode and decode Morse code
+---
+abstract: 'Encode and decode Morse code'
 author:
-    - Phil Pollard <bennie@cpan.org>
-license:            artistic_2
-distribution_type:  module
-configure_requires:  {}
-build_requires:  {}
-requires:
-    perl:          5.006
-    Test::Simple:  0
-resources:
-    bugtracker:
-        web:  https://rt.cpan.org/Dist/Display.html?Name=Text-Morse
-    repository:
-        type:  git
-        url:   git://github.com/bennie/perl-Text-Morse.git
-        web:   http://github.com/bennie/perl-Text-Morse
-no_index:
-    directory:
-        - t
-        - inc
-        - t
-generated_by:       ExtUtils::MakeMaker version 6.56
+  - 'Phil Pollard <bennie@cpan.org>'
+build_requires:
+  ExtUtils::MakeMaker: '0'
+configure_requires:
+  ExtUtils::MakeMaker: '0'
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.9, CPAN::Meta::Converter version 2.140630'
+license: artistic_2
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: '1.4'
+name: Text-Morse
+no_index:
+  directory:
+    - t
+    - inc
+    - t
+provides:
+  Text::Morse:
+    file: lib/Text/Morse.pm
+    version: '0.04'
+requires:
+  Test::More: '0'
+  Test::Simple: '0'
+  perl: '5.006001'
+resources:
+  bugtracker: https://rt.cpan.org/Dist/Display.html?Name=Text-Morse
+  repository: git://github.com/bennie/perl-Text-Morse.git
+version: '0.04'
